Fixed: Cancel button on Mobile Post page now takes you back to thread list if you were creating a new thread. Fixed: Post and Logon headers were in the wrong colour on a few styles.

--- a/forum/styles/green/mobile.css
+++ b/forum/styles/green/mobile.css
@@ -525,7 +525,7 @@ a.thread_list_link {
 }
 
 .post h2 {
-    background-color: #A6BED7;
+    background-color: #63CA31;
     color: #FFFFFF;
     font-weight: normal;
     margin: 0;
@@ -601,7 +601,7 @@ a.thread_list_link {
 }
 
 .logon h2 {
-    background-color: #A6BED7;
+    background-color: #63CA31;
     color: #FFFFFF;
     font-weight: normal;
     margin: 0;
