--- a/forum/styles/violet/mobile.css
+++ b/forum/styles/violet/mobile.css
@@ -525,7 +525,7 @@ a.thread_list_link {
 }
 
 .post h2 {
-    background-color: #A6BED7;
+    background-color: #7B537B;
     color: #FFFFFF;
     font-weight: normal;
     margin: 0;
@@ -601,7 +601,7 @@ a.thread_list_link {
 }
 
 .logon h2 {
-    background-color: #A6BED7;
+    background-color: #7B537B;
     color: #FFFFFF;
     font-weight: normal;
     margin: 0;
